deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iris-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: iris
  template:
    metadata:
      labels:
        app: iris
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: iris-prediction
        image: vekosek3000/iris_prediction:latest
        ports:
        - containerPort: 5000
