service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-service
spec:
  selector:
    app: iris
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
